:bug: chore: event to events/ && fix openapi docs
